Add assets, pages, and styles

--- a/app/resources/scss/abstract/_variables.scss
+++ b/app/resources/scss/abstract/_variables.scss
@@ -2,7 +2,7 @@
 $font-primary: "Proxima Nova";
 
 // Colors
-$color-light-blue: #f4f8ff;
+$background: #f4f8ff;
 $color-blue: #1673ff;
 $color-red: #ed0a3f;
 $color-yellow: #f9c546;
