--- a/app/resources/scss/abstract/_mixins.scss
+++ b/app/resources/scss/abstract/_mixins.scss
@@ -1,3 +1,16 @@
+@import "variables";
+
+@mixin full-size {
+	width: 100%;
+	height: 100%;
+}
+
+@mixin center {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 @mixin flex($justify-content: stretch, $align-items: stretch, $direction: row) {
 	display: flex;
 	justify-content: $justify-content;
@@ -5,8 +18,27 @@
 	flex-direction: $direction;
 }
 
-@mixin font($size: 14px, $font: $font-primary, $weight: 400) {
-	font-family: $font-family;
+@mixin font($font: $font-primary, $size: 14px, $weight: 400) {
+	font-family: $font;
 	font-size: $size;
 	font-weight: $weight;
+}
+
+@mixin button($bg, $color: $color-black) {
+	@include font($size: 15px, $weight: 400);
+	padding: 2px 10px;
+	color: $color;
+	background-color: $bg;
+	border-radius: 4px;
+	border: 0;
+	outline: 0;
+	cursor: pointer;
+	transition: 150ms;
+	text-align: center;
+	text-decoration: none;
+
+	&:hover {
+		transition: 150ms;
+		opacity: 0.7;
+	}
 }
