--- a/app/resources/css/popup-settings.css
+++ b/app/resources/css/popup-settings.css
@@ -166,6 +166,87 @@ body {
   transform: translateX(24px);
 }
 
+/* The snackbar - position it at the bottom and in the middle of the screen */
+.Snackbar {
+  visibility: hidden;
+  /* Hidden by default. Visible on click */
+  min-width: 150px;
+  /* Set a default minimum width */
+  margin-left: -75px;
+  /* Divide value of min-width by 2 */
+  background-color: #333;
+  /* Black background color */
+  color: #fff;
+  /* White text color */
+  text-align: center;
+  /* Centered text */
+  border-radius: 2px;
+  /* Rounded borders */
+  padding: 10px;
+  /* Padding */
+  position: fixed;
+  /* Sit on top of the screen */
+  z-index: 1;
+  /* Add a z-index if needed */
+  left: 50%;
+  /* Center the snackbar */
+  bottom: 30px;
+  /* 30px from the bottom */
+  border-radius: 8px;
+  font-family: "Proxima Nova";
+}
+
+/* Show the snackbar when clicking on a button (class added with JavaScript) */
+.Snackbar.show {
+  visibility: visible;
+  /* Show the snackbar */
+  /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+   However, delay the fade out process for 2.5 seconds */
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+/* Animations to fade the snackbar in and out */
+@-webkit-keyframes fadein {
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+  to {
+    bottom: 30px;
+    opacity: 1;
+  }
+}
+@keyframes fadein {
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+  to {
+    bottom: 30px;
+    opacity: 1;
+  }
+}
+@-webkit-keyframes fadeout {
+  from {
+    bottom: 30px;
+    opacity: 1;
+  }
+  to {
+    bottom: 0;
+    opacity: 0;
+  }
+}
+@keyframes fadeout {
+  from {
+    bottom: 30px;
+    opacity: 1;
+  }
+  to {
+    bottom: 0;
+    opacity: 0;
+  }
+}
 .PopupSettings {
   width: 100%;
   height: 100%;
@@ -186,6 +267,10 @@ body {
   font-family: "Proxima Nova";
   font-size: 15px;
   font-weight: bold;
+  display: flex;
+  justify-content: stretch;
+  align-items: center;
+  flex-direction: row;
   margin: 0em;
 }
 .PopupSettings .container .item .label .name .alt {
@@ -200,17 +285,32 @@ body {
   margin: 0;
   opacity: 0.6;
 }
+.PopupSettings .container .item .label .shortcut-on {
+  font-family: "Proxima Nova";
+  font-size: 8px;
+  font-weight: bold;
+  padding: 2px 9px;
+  background-color: #26c296;
+  margin-left: 8px;
+  border-radius: 9px;
+  color: white;
+  cursor: pointer;
+}
+.PopupSettings .container .item .label .shortcut-on.hide {
+  display: none;
+}
 .PopupSettings .container .item .value {
   font-family: "Proxima Nova";
-  font-size: 13px;
+  font-size: 12px;
   font-weight: 400;
   display: block;
-  width: 90px;
-  padding: 5px 10px;
+  width: 100px;
+  padding: 5px 8px;
   margin-left: auto;
   text-align: center;
   border-radius: 6px;
   border: 1px solid rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
 .PopupSettings .container .item .value.shortcut {
   text-align: right;
