--- a/app/resources/css/dashboard.css
+++ b/app/resources/css/dashboard.css
@@ -347,6 +347,9 @@ body {
 .Main .header .logo {
   flex: 1;
 }
+.Main .header .logo img {
+  height: 50px;
+}
 .Main .header .configuration {
   margin-right: 80px;
 }
