--- a/app/resources/css/settings.css
+++ b/app/resources/css/settings.css
@@ -253,6 +253,7 @@ body {
 }
 .Settings .logo {
   height: 50px;
+  margin-top: 10px;
   display: block;
   margin-left: auto;
   margin-right: auto;
