--- a/app/resources/css/settings.css
+++ b/app/resources/css/settings.css
@@ -32,7 +32,7 @@
 }
 
 .text-blue {
-  color: #1673ff;
+  color: #4784fa;
 }
 
 .text-red {
@@ -56,7 +56,7 @@
 }
 
 .bg-blue {
-  background-color: #1673ff;
+  background-color: #4784fa;
 }
 
 .bg-red {
@@ -91,8 +91,8 @@ html {
 }
 
 body {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 .Box {
