--- a/app/resources/scss/abstract/_variables.scss
+++ b/app/resources/scss/abstract/_variables.scss
@@ -3,7 +3,7 @@ $font-primary: "Proxima Nova";
 
 // Colors
 $background: #f4f8ff;
-$color-blue: #1673ff;
+$color-blue: #4784fa;
 $color-red: #ed0a3f;
 $color-yellow: #f9c546;
 $color-green: #26c296;
