--- a/app/resources/css/popup-settings.css
+++ b/app/resources/css/popup-settings.css
@@ -32,7 +32,7 @@
 }
 
 .text-blue {
-  color: #1673ff;
+  color: #4784fa;
 }
 
 .text-red {
@@ -56,7 +56,7 @@
 }
 
 .bg-blue {
-  background-color: #1673ff;
+  background-color: #4784fa;
 }
 
 .bg-red {
@@ -91,8 +91,8 @@ html {
 }
 
 body {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 .Box {
@@ -324,7 +324,7 @@ body {
   font-family: "Proxima Nova";
   font-size: 15px;
   font-weight: 400;
-  padding: 2px 10px;
+  padding: 4px 10px;
   color: #333333;
   background-color: #f9c546;
   border-radius: 4px;
@@ -348,5 +348,5 @@ body {
 }
 .PopupSettings .button#upgrade {
   color: white;
-  background-color: #1673ff;
+  background-color: #4784fa;
 }
