--- a/app/resources/scss/dashboard.scss
+++ b/app/resources/scss/dashboard.scss
@@ -3,7 +3,7 @@
 
 // Components
 @import "components/box";
-@import "components/switch";
+@import "components/switch-reverse";
 @import "components/circular-checkbox";
 @import "components/dropdown-menu";
 @import "components/snackbar";
@@ -15,17 +15,20 @@ $red: #ff0000;
 $yellow: #fcee21;
 
 .Main {
-	padding: 30px 40px 10px;
+	padding: 20px 40px 0;
 	min-width: 100%;
 	min-height: 100%;
 	background-color: $background;
 
 	.header {
 		width: 100%;
-		@include flex($align-items: flex-end);
+		display: grid;
+		grid-template-columns: 0.3fr 0.7fr;
+		column-gap: 40px;
 
 		.logo {
-			flex: 1;
+			flex-basis: 30%;
+			@include flex(center, center);
 
 			img {
 				height: 50px;
@@ -33,15 +36,29 @@ $yellow: #fcee21;
 		}
 
 		.configuration {
-			margin-right: 80px;
+			@include flex(space-between, flex-end);
+
+			#search {
+				width: 130px;
+				padding: 4px 10px;
+				background-color: #fff;
+				text-align: center;
+				border: 1px solid $color-gray;
+				border-radius: 20px;
+				outline: 0;
+				@include font($size: 14px);
+
+				&::placeholder {
+					color: $color-black;
+				}
+			}
 
 			.switch-container {
 				@include flex(stretch, center);
-				margin-left: 10px;
 
-				.Switch {
+				.SwitchReverse {
 					width: 35px;
-					height: 17px;
+					height: 18px;
 					margin: 0 8px;
 
 					.slider {
@@ -52,12 +69,6 @@ $yellow: #fcee21;
 							bottom: 2px;
 						}
 					}
-
-					input:checked + .slider:before {
-						-webkit-transform: translateX(14px);
-						-ms-transform: translateX(14px);
-						transform: translateX(14px);
-					}
 				}
 
 				.switch-value {
@@ -67,65 +78,106 @@ $yellow: #fcee21;
 			}
 
 			.kleeboard {
-				@include font($size: 18px);
-				margin-top: 10px;
+				@include font($size: 20px);
+				margin-top: 8px;
 				display: block;
 			}
 
-			.date {
-				@include font($size: 13px);
-				margin-top: 2px;
-				display: block;
-				cursor: pointer;
+			.date-container {
+				margin-top: 8px;
+				@include flex(stretch, center);
+
+				.date {
+					margin-left: -15px;
+					padding: 1px 10px 4px;
+					border: 1px solid $color-gray;
+					background-color: white;
+					display: block;
+					border-radius: 20px;
+					cursor: pointer;
+
+					.date-text {
+						@include font($size: 14px);
+
+						&.day {
+							padding: 0 5px;
+							border-left: 1px solid $color-gray;
+							border-right: 1px solid $color-gray;
+						}
+					}
+
+					.arrow-icon {
+						height: 10px;
+						width: 10px;
+						margin-left: 5px;
+						margin-bottom: -1px;
+					}
+				}
+
+				.btn-today {
+					height: 25px;
+					padding: 0 10px;
+					margin-left: 10px;
+					background-color: $color-blue;
+					color: white;
+					border: 0;
+					border-radius: 20px;
+					@include font($size: 13px);
+				}
+			}
+
+			.user {
+				align-self: center;
+
+				.container {
+					@include flex(flex-start, center);
+					border-top-left-radius: 23px;
+					border-bottom-left-radius: 23px;
+					border-top-right-radius: 7px;
+					border-bottom-right-radius: 7px;
+					width: 80px;
+					padding: 6px 8px;
+					background-color: #e2e2e2;
+					cursor: pointer;
+				}
+
+				.avatar {
+					width: 33px;
+					height: 33px;
+					border: 2px solid white;
+					border-radius: 50%;
+				}
 
 				.arrow-icon {
 					height: 10px;
 					width: 10px;
-					margin-left: 10px;
+					margin-top: 5px;
+					margin-left: 15px;
 				}
-			}
-		}
-
-		.user {
-			.container {
-				@include flex(flex-start, center);
-				border-top-left-radius: 23px;
-				border-bottom-left-radius: 23px;
-				border-top-right-radius: 7px;
-				border-bottom-right-radius: 7px;
-				width: 80px;
-				padding: 6px 8px;
-				background-color: $color-gray;
-				cursor: pointer;
-			}
-
-			.avatar {
-				width: 33px;
-				height: 33px;
-				border: 2px solid white;
-				border-radius: 50%;
-			}
-
-			.arrow-icon {
-				height: 10px;
-				width: 10px;
-				margin-top: 5px;
-				margin-left: 15px;
 			}
 		}
 	}
 
 	.main-content {
-		@include flex(stretch, flex-start);
-		margin-top: 5px;
+		margin-top: 15px;
+		display: grid;
+		grid-template-columns: 0.3fr 0.7fr;
+		column-gap: 40px;
 
 		.folders {
-			flex-basis: 30%;
-			padding-top: 48px;
-			padding-right: 20px;
+			.wrapper {
+				padding: 15px;
+				background-color: #fff;
+				border-radius: 10px;
+				border: 1px solid $color-gray;
+			}
 
 			.btn-new-folder {
 				@include button($color-green, white);
+				display: block;
+				border-radius: 0;
+				border-top-right-radius: 12px;
+				border-bottom-left-radius: 12px;
 			}
 
 			.list {
@@ -136,15 +188,14 @@ $yellow: #fcee21;
 					margin-top: 10px;
 					@include flex(flex-start, center);
 					padding: 2px 5px;
-					border-radius: 4px;
+					border-radius: 5px;
 
 					&.active {
 						.title {
 							flex: none;
 							background-color: $color-blue;
 							color: white;
-							border-radius: 8px;
-							opacity: 0.8;
+							border-radius: 20px;
 						}
 					}
 
@@ -154,8 +205,8 @@ $yellow: #fcee21;
 
 					.title {
 						@include flex(flex-start, center);
-						@include font($size: 20px);
-						color: #a1a1a1;
+						@include font($size: 18px);
+						color: #666666;
 						padding: 3px 10px;
 						flex: 1;
 
@@ -168,55 +219,48 @@ $yellow: #fcee21;
 
 			#folder-bulk-actions {
 				margin-top: 30px;
+				margin-bottom: 9px;
 
 				.button {
-					background-color: $color-gray;
+					text-align: left;
+					display: block;
+					background-color: $color-blue;
+					color: white;
 				}
 			}
 
 			.btn-settings {
 				@include flex(flex-start, center);
 				@include button(transparent, #858585);
-				@include font($size: 16px);
-				margin-top: 25px;
+				@include font($size: 22px);
+				margin-top: 5px;
 				padding: 2px 0;
-				opacity: 1;
 
 				svg {
-					fill: #858585;
-					width: 25px;
-					height: 25px;
+					fill: #969696;
+					width: 40px;
+					height: 40px;
 					margin-right: 10px;
 				}
 			}
 		}
 
 		.contents {
-			flex-basis: 70%;
-
-			#search {
-				width: 130px;
-				padding: 4px 10px;
-				background-color: $color-gray;
-				text-align: center;
-				border: 0;
-				border-radius: 20px;
-				outline: 0;
-				@include font($size: 14px);
-
-				&::placeholder {
-					color: $color-black;
-				}
-			}
-
 			.list {
-				margin-top: 15px;
+				padding: 15px 20px;
+				background-color: #fff;
+				border-radius: 10px;
+				border: 1px solid $color-gray;
+				position: relative;
+				height: 337px;
 
 				.item {
-					margin-top: 20px;
 					@include flex(flex-start, center);
-					padding: 2px 5px;
-					border-radius: 4px;
+					border-radius: 5px;
+
+					&:not(:first-child) {
+						margin-top: 20px;
+					}
 
 					.date {
 						width: 30px;
@@ -255,7 +299,7 @@ $yellow: #fcee21;
 
 						@mixin action-button {
 							border: 0;
-							border-radius: 4px;
+							border-radius: 5px;
 							margin-left: 5px;
 						}
 
@@ -268,6 +312,7 @@ $yellow: #fcee21;
 						.btn-more-settings {
 							@include action-button;
 							@include button($color-blue);
+							display: inline-block;
 						}
 
 						.btn-remove {
@@ -288,11 +333,13 @@ $yellow: #fcee21;
 			}
 
 			#content-bulk-actions {
-				margin-top: 25px;
-				margin-left: 62px;
+				margin-top: 15px;
 
 				.button {
+					width: 180px;
+					display: inline-block;
 					background-color: $color-blue;
+					text-align: left;
 					color: white;
 				}
 
@@ -353,7 +400,7 @@ $yellow: #fcee21;
 
 		input {
 			padding: 4px;
-			border-radius: 4px;
+			border-radius: 5px;
 			outline: 0;
 			border: 1px solid $color-gray;
 			flex: 1;
